--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 80:8000
     env_file:
       - ./.env
-    restart: unless-stopped
+    restart: always
     # depends_on:
     #   - db
   # db:
